[gd_scene load_steps=3 format=3 uid="uid://go3djtyubwbd"]

[ext_resource type="Script" uid="uid://cbm74k62vksjq" path="res://object_creation_scene_script.gd" id="1_g3wga"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fh81t"]

[node name="ObjectCreationScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g3wga")

[node name="PanelCenter" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelRows" type="VBoxContainer" parent="PanelCenter"]
layout_mode = 2

[node name="ObjectScroll" type="ScrollContainer" parent="PanelCenter/PanelRows"]
custom_minimum_size = Vector2(500, 350)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fh81t")

[node name="GridCenter" type="CenterContainer" parent="PanelCenter/PanelRows/ObjectScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ObjectGrid" type="GridContainer" parent="PanelCenter/PanelRows/ObjectScroll/GridCenter"]
layout_mode = 2
columns = 5

[node name="GridLabel" type="Label" parent="PanelCenter/PanelRows"]
layout_mode = 2
text = "Objects in grid: 0"
horizontal_alignment = 1

[node name="ButtonMargin" type="MarginContainer" parent="."]
layout_mode = 1
offset_right = 271.0
offset_bottom = 284.0
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32

[node name="ButtonRows" type="VBoxContainer" parent="ButtonMargin"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 20

[node name="ObjectChoiceRow" type="HBoxContainer" parent="ButtonMargin/ButtonRows"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="DescriptionLabel" type="Label" parent="ButtonMargin/ButtonRows/ObjectChoiceRow"]
layout_mode = 2
text = "Object:"

[node name="ObjectOptions" type="OptionButton" parent="ButtonMargin/ButtonRows/ObjectChoiceRow"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2

[node name="AmountRow" type="HBoxContainer" parent="ButtonMargin/ButtonRows"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="AmountLabel" type="Label" parent="ButtonMargin/ButtonRows/AmountRow"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Amount: 1"

[node name="IncreaseButton" type="Button" parent="ButtonMargin/ButtonRows/AmountRow"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "+"

[node name="ReduceButton" type="Button" parent="ButtonMargin/ButtonRows/AmountRow"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "-"

[node name="AdditionRow" type="HBoxContainer" parent="ButtonMargin/ButtonRows"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="AddButton" type="Button" parent="ButtonMargin/ButtonRows/AdditionRow"]
custom_minimum_size = Vector2(96, 48)
layout_mode = 2
text = "Add"

[node name="ClearButton" type="Button" parent="ButtonMargin/ButtonRows/AdditionRow"]
custom_minimum_size = Vector2(96, 48)
layout_mode = 2
text = "Clear"

[node name="AutoCheck" type="CheckButton" parent="ButtonMargin/ButtonRows"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
size_flags_horizontal = 0
text = "Automatic"

[connection signal="item_selected" from="ButtonMargin/ButtonRows/ObjectChoiceRow/ObjectOptions" to="." method="_class_selected"]
[connection signal="pressed" from="ButtonMargin/ButtonRows/AmountRow/IncreaseButton" to="." method="_on_increase_button_pressed"]
[connection signal="pressed" from="ButtonMargin/ButtonRows/AmountRow/ReduceButton" to="." method="_on_reduce_button_pressed"]
[connection signal="toggled" from="ButtonMargin/ButtonRows/AutoCheck" to="." method="_on_auto_check_toggled"]
